Agregados los datos de la conexión a la base de datos y modelos de las tablas Alumno, Grupo y AlumnoGrupo.

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,11 +4,15 @@
     <head>
         <meta charset="UTF-8">
         <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
+        <script href="/js/bootstrap.js"></script>
     </head>
 
-    <!--Muestreo del contenido de la aplicación -->
-    <main class="container ">
-        {{{ body }}}
-    </main>
-    <!--Fin de muestreo del contenido de la aplicación -->
+    <body>
+        <!--Muestreo del contenido de la aplicación -->
+        <main class="container g-2">
+            {{{ body }}}
+        </main>
+        <!--Fin de muestreo del contenido de la aplicación -->
+    </body>
+
 </html>
