--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,9 +5,57 @@
     <title>Inicio</title>
 </head>
 <body style="background: white;">
-    <h1>Hello World!</h1>
-    <p>
-        Hola :D
-    </p>
+
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Todos</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/1">Activos</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/0">Completados</a>
+        </li>
+    </ul>
+
+    <div class="container p-2" bg-light>
+        <div class="row">
+            {{#each grupos}}
+                <div class="col-md-3 m-2">
+                    <div class="card" style="width: 18rem;">
+                        <img src="#" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">{{dataValues.asignatura}}</h5>
+                            <p class="card-text">{{dataValues.clave}}</p>
+                            <a href="#" class="btn btn-primary">Ver</a>
+                        </div>
+                    </div>
+                </div>
+
+            {{else}}
+                <div class="col-md-3 m-2">
+                    <div class="card" style="width: 18rem; height:14rem ">
+                        <div class="card-body">
+                            <h5 class="card-title">No hay grupos existentes.</h5>
+                            <p class="card-text">Agregue un grupo.</p>
+                        </div>
+                    </div>
+                </div>
+            {{/each}}
+
+            <div class="col-md-3 m-2" >
+                <div class="card" style="width: 18rem;height:14rem">
+                    <div class="card-body">
+                        <div class="row justify-content-md-center" >
+                            <h5 class="card-title">Agregar nuevo grupo</h5>
+                        </div>
+                        <div class="row justify-content-md-center" >
+                            <a class="btn btn-success rounded-circle" href="/grupo/wizard-crear-grupo">+</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
