--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,15 +3,15 @@
 
     <head>
         <meta charset="UTF-8">
-        <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
-        <script href="/js/bootstrap.js"></script>
+        <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+
+
     </head>
 
     <body>
         <!--Muestreo del contenido de la aplicación -->
-        <main class="container g-2">
-            {{{ body }}}
-        </main>
+        {{{ body }}}
+        <script src="js/bootstrap.js"></script>
         <!--Fin de muestreo del contenido de la aplicación -->
     </body>
 
