Commit para subir modelos faltantes

--- a/views/grupo/datosgrupo.hbs
+++ b/views/grupo/datosgrupo.hbs
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Inicio</title>
+        <title>Nuevo Grupo</title>
         <link href="../css/bootstrap.css" rel="stylesheet" type="text/css">
         <script src="../js/bootstrap.js"></script>
     </head>
