Resuelto el problema de las rutas estaticas y programación parcial del Grid para Alumnos.

--- a/views/grupo/inicio-wizard.hbs
+++ b/views/grupo/inicio-wizard.hbs
@@ -1,41 +1,34 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Inicio</title>
-        <link href="../css/bootstrap.css" rel="stylesheet" type="text/css">
-        <script src="../js/bootstrap.js"></script>
-    </head>
-    <body>
-        <div class="container p-5 bg-light ">
-            <div class = "col">
-                <div class="jumbotron ">
-                    <h1 class="display-4">Crear nuevo grupo</h1>
-                    <p class="lead">Para iniciar la creación de un grupo de click en botón:</p>
-                    <hr class="my-4">
-                    <p>
-                        Importar Excel: Permite crear el grupo basado en la información contenida en el archivo de Excel.
-                        <ul>
-                            <li>Forma mas rápida pero propenso a tener errores, se recomienda que verifique los datos importados.</li>
-                        </ul>
+<div class="container p-5 bg-light h-100">
+    <div class="col">
+        <div class="jumbotron ">
+            <h1 class="display-4">Crear nuevo grupo</h1>
+            <p class="lead">Para iniciar la creación de un grupo de click en botón:</p>
+            <hr class="my-4">
+            <p>
+                Importar Excel: Permite crear el grupo basado en la información contenida en el archivo de Excel.
+            <ul>
+                <li>Forma mas rápida pero propenso a tener errores, se recomienda que verifique los datos importados.
+                </li>
+            </ul>
 
-                    </p>
+            </p>
 
-                    <p>
-                        Crear Manualmente: El asistente lo guiará en el proceso donde tendra que ingresar los datos manualmente, para la creacion exitosa del grupo.
-                    <ul>
-                        <li>Forma mas lenta pero en todo momento usted verificará que los datos ingresados sean correctos.</li>
-                    </ul>
-                    </p>
+            <p>
+                Crear Manualmente: El asistente lo guiará en el proceso donde tendra que ingresar los datos manualmente,
+                para la creacion exitosa del grupo.
+            <ul>
+                <li>Forma mas lenta pero en todo momento usted verificará que los datos ingresados sean correctos.</li>
+            </ul>
+            </p>
 
 
-                    <p class="lead">
-                            <a class="btn btn-primary btn-lg" href="#" role="button">Importar Excel</a>
-                            <a class="btn btn-primary btn-lg" href="/grupo/wizard-crear-grupo-manual" role="button">Crear Manualmente</a>
-                    </p>
-                </div>
-
-            </div>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Importar Excel</a>
+                <a class="btn btn-primary btn-lg" href="/grupo/wizard-crear-grupo-manual" role="button">Crear
+                    Manualmente</a>
+            </p>
         </div>
-    </body>
-</html>
+
+    </div>
+</div>
+
