--- a/views/alumno/grid-alumnos.hbs
+++ b/views/alumno/grid-alumnos.hbs
@@ -1,21 +1,103 @@
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Agregar alumnos</title>
-        <link href="../css/bootstrap.css" rel="stylesheet" type="text/css">
-        <script src="../js/bootstrap.js"></script>
+<body>
+<div class="container bg-light m-100">
+    <div class="row m-2 p-3">
+        <h1 class="display-4">Agregar alumnos</h1>
+    </div>
 
-    </head>
+    <div class="row m-3">
+        <div class="colinput-group">
+            <input class="form-control" type="text" placeholder="No. Control" id="ClaveBox" name="ClaveBox" aria-label="Clave">
+        </div>
+        <div class="col input-group">
+            <input class="form-control" type="text" placeholder="Nombre(s)" id="NombreBox" name="NombreBox" aria-label="Nombre(s)">
+        </div>
+        <div class="col input-group">
+            <input class="form-control" type="text" placeholder="Apellidos" id="ApellidoBox" name="ApellidoBox" aria-label="Apellidos">
+        </div>
 
-    <body>
-        <div class="container bg-light">
-            <div class="row-cols-1">
-                <div class="col-auto">
-                   HOLA
-                </div>
+    </div>
 
+    <div class="row-cols-1  d-flex flex-row-reverse ">
+        <div class="col-auto d-flex flex-row-reverse p-3" >
+            <div id="toolbar  ">
+                <button id="add" class="btn btn-primary">Añadir nuevo</button>
+                <button id="remove" class="btn btn-danger">Eliminar</button>
             </div>
         </div>
-        <script src="../js/canvas-datagrid.js"></script>
-    </body>
-</html>
+
+    </div>
+    <form class="needs-validation" action="/alumno/wizard-agregar-alumnos-manual" method="POST" novalidate>
+
+
+        <div class="row-cols-1 ">
+            <div class="col-auto">
+                <table id="table" data-toggle="table" data-toolbar="#toolbar"  data-click-to-select="true" data-search="true"
+                data-advanced-search="true" data-filter-control="true">
+                    <thead>
+                        <tr>
+                            <th data-field="estado" data-sorteable="false" data-checkbox="true"></th>
+                            <th data-field="clave" data-sorteable="false">No. Control</th>
+                            <th data-field="nombre" data-sorteable="true">Nombre</th>
+                            <th data-field="apellidos" data-sorteable="true">Apellidos</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="row p-3 m-0 d-flex flex-row-reverse">
+            <button class="btn btn-info" type="submit"> Finalizar</button>
+        </div>
+    </form>
+</div>
+
+<script>
+    var table = $('#table')
+    var i = 1;
+    $('#add').on('click', function () {
+        table.bootstrapTable('insertRow',{
+            index: i,
+            row:{
+                clave:  document.getElementById("ClaveBox").value,
+                nombre: document.getElementById('NombreBox').value,
+                apellidos: document.getElementById("ApellidoBox").value,
+            }
+        })
+        i = i + 1
+    })
+
+    $('#remove').on('click', function () {
+        var claves = $.map(table.bootstrapTable('getSelections'), function (row){
+            return row.clave
+        })
+        table.bootstrapTable('remove',{
+            field: 'clave',
+            values: claves
+        })
+    })
+
+    // Get the input field
+    var input = document.getElementById("ApellidoBox");
+
+    // Execute a function when the user releases a key on the keyboard
+    input.addEventListener("keyup", function(event) {
+        // Number 13 is the "Enter" key on the keyboard
+        if (event.keyCode === 13) {
+            table.bootstrapTable('insertRow',{
+                index:i,
+                row:{
+                    clave:  document.getElementById("ClaveBox").value,
+                    nombre: document.getElementById('NombreBox').value,
+                    apellidos: document.getElementById("ApellidoBox").value,
+                }
+            })
+        }
+        i = i + 1
+    });
+
+
+    </script>
+</body>
+
