--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,18 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 
     <head>
         <meta charset="UTF-8">
-        <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-
-
+        <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
+        <link href="/css/bootstrap-icons.css" rel="stylesheet" type="text/css">
+        <link href="/css/font-awesome.css" rel="stylesheet" type="text/css">
+        <link href="/js/bootstrap-table.css" rel="stylesheet" type="text/css">
+        <script src="/js/jquery.js"></script>
+        <script src="/js/bootstrap.js"></script>
+        <script src="/js/bootstrap-table.js"></script>
     </head>
 
-    <body>
+<body>
         <!--Muestreo del contenido de la aplicación -->
         {{{ body }}}
-        <script src="js/bootstrap.js"></script>
         <!--Fin de muestreo del contenido de la aplicación -->
-    </body>
+</body>
+
 
 </html>
