--- a/views/grupo/inicio-wizard.hbs
+++ b/views/grupo/inicio-wizard.hbs
@@ -1,6 +1,11 @@
+<title>Nuevo grupo- Seguimiento de Estudiantes</title>
+
 <div class="container p-5 bg-light h-100">
-    <div class="col">
+
+    <div class="row">
+
         <div class="jumbotron ">
+
             <h1 class="display-4">Crear nuevo grupo</h1>
             <p class="lead">Para iniciar la creación de un grupo de click en botón:</p>
             <hr class="my-4">
@@ -24,8 +29,8 @@
 
             <p class="lead">
                 <a class="btn btn-primary btn-lg" href="#" role="button">Importar Excel</a>
-                <a class="btn btn-primary btn-lg" href="/grupo/wizard-crear-grupo-manual" role="button">Crear
-                    Manualmente</a>
+                <a class="btn btn-primary btn-lg" href="/grupo/wizard-crear-grupo-manual" role="button">Crear Manualmente</a>
+                <a class="btn btn-danger btn-lg align-right" href="/" role="button">Cancelar</a>
             </p>
         </div>
 
