Changes by viole

--- a/views/alumno/grid-alumnos.hbs
+++ b/views/alumno/grid-alumnos.hbs
@@ -55,9 +55,9 @@
                     </tbody>
                 </table>
             </div>
-        </div>
-        <div class="row p-3 m-0 d-flex flex-row-reverse">
-            <button class="btn btn-info" type="submit" id="finalizar"> Finalizar</button>
+        </div><div class="row p-3 d-flex flex-row-reverse">
+            <button class="btn btn-primary" type="submit" id="finalizar"> Finalizar</button>
+            <a class="btn btn-danger" href="/abortar-grupo/{{grupo.dataValues.id}}" role="button">Cancelar</a>
         </div>
     </form>
 </div>
