--- a/views/grupo/datosgrupo.hbs
+++ b/views/grupo/datosgrupo.hbs
@@ -55,6 +55,7 @@
                 <a class="btn btn-outline-primary" href="/grupo/wizard-crear-grupo-manual">
                     Limpiar
                 </a>
+                <a class="btn btn-danger align-right" href="/" role="button">Cancelar</a>
             </div>
         </div>
     </form>
