Arreglado sobre posicionamiento de las tarjetas, el alto de estas se puso en 24rem, agregado iconos en la barra de navegación por grupo y se agregaron imágenes predeterminadas.

--- a/views/grupo/vista-grupo-temas.hbs
+++ b/views/grupo/vista-grupo-temas.hbs
@@ -1,4 +1,4 @@
-<div class="container bg-light">
+<div class="container p-2 bg-light">
     <div class="row">
         <ul class="nav nav-tabs">
             <li class="nav-item">
@@ -8,16 +8,16 @@
                 <a class="nav-link " aria-current="page" href="/grupo/inicio/:id">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="/grupo/alumnos/:id">Alumnos</a>
+                <a class="nav-link " href="/grupo/alumnos/:id"><i class="bi bi-people-fill"></i>  Alumnos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="/grupo/temas/:id">Temas</a>
+                <a class="nav-link active" href="/grupo/temas/:id"><i class="bi bi-book-fill"></i> Temas</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/grupo/actividades/:id">Actividades</a>
+                <a class="nav-link" href="/grupo/actividades/:id"><i class="bi bi-bookmark-check-fill"></i> Actividades</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/grupo/calificaciones/:id">Calificaciones</a>
+                <a class="nav-link" href="/grupo/calificaciones/:id"><i class="bi bi-file-spreadsheet-fill"></i> Calificaciones</a>
             </li>
         </ul>
     </div>
