--- a/views/grupo/vista-grupo-alumnos.hbs
+++ b/views/grupo/vista-grupo-alumnos.hbs
@@ -1,6 +1,6 @@
 <title>{{asignatura}} {{clave}} - Alumnos - Seguimiento de Estudiantes</title>
 
-<div class="container bg-light">
+<div class="container  p-2 bg-light">
     <div class="row">
         <ul class="nav nav-tabs">
             <li class="nav-item">
@@ -10,20 +10,20 @@
                 <a class="nav-link " aria-current="page" href="/grupo-inicio/{{idgrupo}}">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="/grupo/alumnos/{{idgrupo}}">Alumnos</a>
+                <a class="nav-link active" href="/grupo/alumnos/{{idgrupo}}"><i class="bi bi-people-fill"></i> Alumnos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/grupo/temas/{{idgrupo}}">Temas</a>
+                <a class="nav-link" href="/grupo/temas/{{idgrupo}}"><i class="bi bi-book-fill"></i> Temas</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/grupo/actividades/{{idgrupo}}">Actividades</a>
+                <a class="nav-link" href="/grupo/actividades/{{idgrupo}}"><i class="bi bi-bookmark-check-fill"></i> Actividades</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/grupo/calificaciones/{{idgrupo}}">Calificaciones</a>
+                <a class="nav-link" href="/grupo/calificaciones/{{idgrupo}}"><i class="bi bi-file-spreadsheet-fill"></i> Calificaciones</a>
             </li>
         </ul>
     </div>
-    <div class="row m-2 p-3">
+    <div class="row m-2 p-2">
         <h2 class="">Lista de Alumnos</h2>
     </div>
     <div class="row m-2 p-0">
@@ -31,7 +31,7 @@
                 <div class="list-group">
                     {{#each alumnos}}
                         <a type="button" class="list-group-item list-group-item-action" aria-current="true" href="#">
-                            <strong>{{dataValues.clave}}</strong> - {{dataValues.apellidos}} {{dataValues.nombre}}
+                            <i class="bi bi-people-fill"></i><strong>{{dataValues.clave}}</strong> - {{dataValues.apellidos}} {{dataValues.nombre}}
                         </a>
                     {{/each}}
                 </div>
