Comentadas las vistas.

--- a/views/grupo/vista-inicio-grupo.hbs
+++ b/views/grupo/vista-inicio-grupo.hbs
@@ -1,6 +1,6 @@
 <title>{{grupo.dataValues.asignatura}} {{grupo.dataValues.clave}} - Inicio - Seguimiento de Estudiantes</title>
 <div class="container bg-light p-2" style="height: content-box">
-
+    <!-- Barra de navegación -->
     <ul class="nav nav-tabs">
         <li class="nav-item">
             <a class="nav-link bi bi-house-fill" aria-current="page" href="/"></a>
@@ -23,10 +23,10 @@
                     class="bi bi-file-spreadsheet-fill"></i> Calificaciones</a>
         </li>
     </ul>
-
-
+    <!-- Titulo de la vista -->
     <div class="row m-2 ">
         <h2 class="">{{grupo.dataValues.clave}} - {{grupo.dataValues.asignatura}}</h2>
     </div>
 
+    <!-- Contenido de la vista -->
 </div>
