--- a/views/alumno/grid-alumnos.hbs
+++ b/views/alumno/grid-alumnos.hbs
@@ -14,17 +14,19 @@
     <div class="row m-2 p-3">
         <h1 class="display-4">Agregar alumnos</h1>
     </div>
+    <!-- Datos del alumno -->
     <div class="row m-3">
         <div class="col input-group">
             <input class="form-control" type="text" placeholder="No. Control" id="ClaveBox" name="ClaveBox" aria-label="Clave">
         </div>
-        <div class="col input-group">
-            <input class="form-control" type="text" placeholder="Nombre(s)" id="NombreBox" name="NombreBox" aria-label="Nombre(s)">
-        </div>
+
         <div class="col input-group">
             <input class="form-control" type="text" placeholder="Apellidos" id="ApellidoBox" name="ApellidoBox" aria-label="Apellidos">
         </div>
 
+        <div class="col input-group">
+            <input class="form-control" type="text" placeholder="Nombre(s)" id="NombreBox" name="NombreBox" aria-label="Nombre(s)">
+        </div>
     </div>
 
     <div class="row-cols-1  d-flex flex-row-reverse ">
@@ -34,8 +36,9 @@
                 <button id="remove" class="btn btn-danger">Eliminar</button>
             </div>
         </div>
-
     </div>
+
+    <!-- Tabla -->
     <form class="needs-validation" action="/alumno/wizard-agregar-alumnos-manual/{{grupo.dataValues.id}}" method="POST" novalidate>
         <input type="hidden" id="valorTabla" name="valorTabla">
         <div class="row-cols-1 ">
@@ -62,59 +65,6 @@
     </form>
 </div>
 
-<script>
-    var table = $('#table')
-    var hola = 'hola';
-    var tablaDatos;
-    var i = 1;
-
-    $('#add').on('click', function () {
-        table.bootstrapTable('insertRow',{
-            index: i,
-            row:{
-                clave:  document.getElementById("ClaveBox").value,
-                nombre: document.getElementById('NombreBox').value,
-                apellidos: document.getElementById("ApellidoBox").value,
-            }
-        })
-        document.getElementById("ClaveBox").value = "";
-        document.getElementById("NombreBox").value = "";
-        document.getElementById("ApellidoBox").value = "";
-        tablaDatos = table.bootstrapTable('getData');
-        document.getElementById("valorTabla").value = JSON.stringify(tablaDatos);
-        i = i + 1
-        console.log(tablaDatos);
-    })
-
-    $('#remove').on('click', function () {
-        var claves = $.map(table.bootstrapTable('getSelections'), function (row){
-            return row.clave
-        })
-        table.bootstrapTable('remove',{
-            field: 'clave',
-            values: claves
-        })
-    })
-
-    // Execute a function when the user releases a key on the keyboard
-    input.addEventListener("keyup", function(event) {
-        // Number 13 is the "Enter" key on the keyboard
-        if (event.keyCode === 13) {
-            table.bootstrapTable('insertRow',{
-                index:i,
-                row:{
-                    clave:  document.getElementById("ClaveBox").value,
-                    nombre: document.getElementById('NombreBox').value,
-                    apellidos: document.getElementById("ApellidoBox").value,
-                }
-            })
-            document.getElementById("ClaveBox").value = "";
-            document.getElementById("NombreBox").value = "";
-            document.getElementById("ApellidoBox").value = "";
-        }
-        i = i + 1
-    });
-
-    </script>
+<script src="/js/grid-alumnos-helper.js"></script>
 </body>
 
