Agregada la visualizacion de "Temas"

--- a/views/grupo/vista-grupo-temas.hbs
+++ b/views/grupo/vista-grupo-temas.hbs
@@ -23,8 +23,8 @@
         </li>
     </ul>
     <!-- Titulo de la vista -->
-    <div class="row">
-
+    <div class="row m-2 p-2">
+        <h2>Temas</h2>
     </div>
     <!-- Contenido de la vista -->
 </div>
