--- a/views/tema/tema-nuevo.hbs
+++ b/views/tema/tema-nuevo.hbs
@@ -1,19 +1,94 @@
 <title>Nuevo tema - Seguimiento de Estudiantes</title>
 
 <div class="container p-2 bg-light align-content-center">
-    <div class="card">
-        <h4 class="card-header">Nuevo Tema</h4>
-        <div class="card-body">
-            <form class="needs-validation" action="/tema/nuevo-tema/{{idgrupo}}" method="POST" novalidate>
-                <div class="row">
-                    <label for="nombre" class="form-label">Nombre</label>
-                    <input type="tt" class="form-control" name="nombre" id="nombre" required>
+    <form class="needs-validation" action="/tema/nuevo-tema/{{idgrupo}}" method="POST" novalidate>
+    <!--Entrada de datos para creación de un nuevo tema. -->
+        <div class="row m-2 p-2">
+            <div class="card w-100" >
+                <h4 class="card-header">Nuevo Tema</h4>
+                <div class="card-body ">
+                    <div class="row">
+                        <div class="col-4">
+                            <label for="numerotema" class="form-label">Número</label>
+                            <input type="number" min="1" step="1" class="form-control" value="1" name="numerotema"
+                                   id="numerotema" required>
+                        </div>
+                        <div class="col">
+                            <label for="nombre" class="form-label">Nombre</label>
+                            <input type="text" class="form-control" name="nombre" id="nombre" required>
+                        </div>
+                    </div>
                 </div>
-                <div class="row">
-                    <button class="btn btn-primary" type="submit">Guardar</button>
-                    <a class="btn btn-danger align-right" href="/grupo/temas/{{idgrupo}}" role="button">Cancelar</a>
+                <div class="card-footer d-flex flex-row-reverse ">
+                    <button class="btn btn-primary" button-align="right" type="submit">Guardar</button>
+                    <a class="btn btn-danger" a-align="right" href="/grupo/temas/{{idgrupo}}" role="button">Cancelar</a>
                 </div>
-            </form>
+            </div>
         </div>
-    </div>
+        <input type="hidden" id="valorTabla" name="valorTabla">
+    </form>
+        <!--Entrada de datos para agregar actividades al tema.-->
+        <div class="row m-2 p-2">
+            <div class="card w-100" style="height: max-content">
+                <h5 class="card-header">Actividades del nuevo tema</h5>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-6">
+                            <label for="nombreBox" class="form-label">Nombre</label>
+                            <input type="text" class="form-control" name="nombreBox" id="nombreBox" required>
+                        </div>
+                        <div class="col">
+                            <label for="valorBox" class="form-label">Valor</label>
+                            <input type="number" min="1" step="1" class="form-control" value="1" name="valorBox" id="valorBox" required>
+                        </div>
+                        <div class="col">
+                            <label for="tipoBox" class="form-label">Categoría</label>
+                            <select class="form-select" name="tipoBox" id="tipoBox" value=1>
+                                <option value="1">Investigación</option>
+                                <option value="2">Presentación</option>
+                                <option value="3">Proyecto</option>
+                                <option value="4">Reporte / Práctica</option>
+                                <option value="5">Resumen</option>
+                                <option value="6">Mapa Conceptual</option>
+                                <option value="7">Cuadro Sinoptico</option>
+                                <option value="8">Mapa Mental</option>
+                                <option value="9">Ejercicios</option>
+                                <option value="10">Otros</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="row-cols-1  d-flex flex-row-reverse">
+                        <div class="col-auto d-flex flex-row-reverse p-3" >
+                            <div id="toolbar">
+                                <button id="remove" class="btn btn-danger" type="none">Eliminar</button>
+                                <button id="add" class="btn btn-primary" type="none">Añadir nuevo</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Grid para actividades -->
+                    <div class="row-cols-1 ">
+                        <div class="col-auto">
+                            <table id="table" data-toggle="table" data-toolbar="#toolbar"  data-click-to-select="true" data-search="true"
+                                   data-advanced-search="true" data-filter-control="true" name="table">
+                                <thead>
+                                <tr>
+                                    <th data-field="estado" data-sorteable="false" data-checkbox="true"></th>
+                                    <th data-field="nombreCol" data-sorteable="false">Nombre </th>
+                                    <th data-field="valorCol" data-sorteable="false">Valor </th>
+                                    <th data-field="tipoCol" data-sorteable="true">Tipo</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
 </div>
