Editamos vista tema-nuevo

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,12 +4,21 @@
     <head>
         <meta charset="UTF-8">
         <script src="/js/jquery.js"></script>
+        <script src="/js/popper.min.js"></script>
+        <script src="/js/popper-utils.min.js"></script>
         <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
         <link href="/css/bootstrap-icons.css" rel="stylesheet" type="text/css">
         <link href="/css/font-awesome.css" rel="stylesheet" type="text/css">
         <link href="/js/bootstrap-table.css" rel="stylesheet" type="text/css">
         <script src="/js/bootstrap-table.js"></script>
         <script src="/js/bootstrap.js"></script>
+
+        <nav class="navbar navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand bi bi-house-fill"  href="/">
+                </a>
+            </div>
+        </nav>
 
     </head>
 
