--- a/views/grupo/vista-grupo-actividades.hbs
+++ b/views/grupo/vista-grupo-actividades.hbs
@@ -2,9 +2,6 @@
     <!-- Barra de navegación -->
     <ul class="nav nav-tabs">
         <li class="nav-item">
-            <a class="nav-link bi bi-house-fill" aria-current="page" href="/"></a>
-        </li>
-        <li class="nav-item">
             <a class="nav-link " aria-current="page" href="/grupo-inicio/{{idgrupo}}">Inicio</a>
         </li>
         <li class="nav-item">
@@ -23,8 +20,33 @@
         </li>
     </ul>
     <!-- Titulo de la vista -->
-    <div class="row">
-
+    <div class="row m-2 p-2">
+        <h2 class="">Actividades</h2>
+    </div>
+    <div class="row m-2 p-2">
+        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+            <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Home</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</button>
+            </li>
+        </ul>
+        <div class="tab-content" id="pills-tabContent">
+            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">...</div>
+            <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...</div>
+            <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">...</div>
+        </div>
+    </div>
+    <!-- Titulo de la vista -->
+    <div class="row m-2 p-2">
+        <a class="btn btn-info btn-sm rounded-pill">Todas</a>
+    {{#each temas}}
+        <a class="btn btn-info btn-sm rounded-pill">{temas.dataValues.nombre}</a>
+    {{/each}}
     </div>
     <!-- Contenido de la vista -->
 </div>
