--- a/views/tema/tema-nuevo.hbs
+++ b/views/tema/tema-nuevo.hbs
@@ -1,3 +1,5 @@
+
+
 <title>Nuevo tema - Seguimiento de Estudiantes</title>
 
 <div class="container p-2 bg-light align-content-center">
@@ -92,3 +94,4 @@
         </div>
 
 </div>
+<script src="/js/grid-actividades-helper.js"></script>
