Corrección de error para crear y guardar grupo Corrección para mostrar errores correctamente

--- a/views/grupo/vista-grupo-temas.hbs
+++ b/views/grupo/vista-grupo-temas.hbs
@@ -37,6 +37,8 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">{{dataValues.nombre}}</h5>
+                    </div>
+                    <div class="card-footer">
                         <a href="#" class="btn btn-primary">Actividades</a>
                     </div>
                 </div>
