Se cambió el icono de los botones.

--- a/views/grupo/vista-grupo-alumnos.hbs
+++ b/views/grupo/vista-grupo-alumnos.hbs
@@ -31,7 +31,7 @@
             <div class="list-group">
                 {{#each alumnos}}
                     <a type="button" class="list-group-item list-group-item-action" aria-current="true" href="#">
-                        <i class="bi bi-people-fill"></i><strong>{{dataValues.clave}}</strong>
+                        <i class="bi-person-badge-fill"></i><strong>{{dataValues.clave}}</strong>
                         - {{dataValues.apellidos}} {{dataValues.nombre}}
                     </a>
                 {{/each}}
