Agregado helper para popovers.

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,6 +12,8 @@
         <link href="/js/bootstrap-table.css" rel="stylesheet" type="text/css">
         <script src="/js/bootstrap-table.js"></script>
         <script src="/js/bootstrap.js"></script>
+        <script src="/js/bootstrap.bundle.js"></script>
+        <script src="/js/popover-helper.js"></script>
 
         <nav class="navbar navbar-light bg-light">
             <div class="container">
