Se modificó el modelo de datos para guardar el tipo de la actividad en String.

--- a/views/grupo/vista-grupo-temas.hbs
+++ b/views/grupo/vista-grupo-temas.hbs
@@ -36,7 +36,7 @@
                         <a class="bi bi-pencil-square " align="right" href="#"></a>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">{{dataValues.nombre}}</h5>
+                        <h5 class="card-title">{{dataValues.numerotema}}. {{dataValues.nombre}}</h5>
                     </div>
                     <div class="card-footer">
                         <a href="#" class="btn btn-primary">Actividades</a>
