Se agregó el boton para añadir alumnos en la lista

--- a/views/grupo/vista-grupo-alumnos.hbs
+++ b/views/grupo/vista-grupo-alumnos.hbs
@@ -35,6 +35,9 @@
                         - {{dataValues.apellidos}} {{dataValues.nombre}}
                     </a>
                 {{/each}}
+                <a type="button" class="list-group-item list-group-item-action align-items-center" aria-current="true" href="#">
+                    <i class="bi bi-plus-circle-fill"></i> Nuevo Alumno
+                </a>
             </div>
         </div>
         <div class="col-auto">
