Añadimos vista para agregar actividades, se crean los metodos correspondientes en el controlador

--- a/views/grupo/vista-grupo-calificaciones.hbs
+++ b/views/grupo/vista-grupo-calificaciones.hbs
@@ -1,4 +1,4 @@
-<div class="container p-2 bg-light">
+<div class="container-fluid p-2 bg-light">
     <!-- Barra de navegación -->
     <ul class="nav nav-tabs">
         <li class="nav-item">
